--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "prebuild": "rimraf build && rimraf deno_build",
+    "build": "denoify && tsc",
     "test": "npm run build && node benchmark/for.benchmark.js"
   },
   "keywords": [],
@@ -13,5 +14,9 @@
   "devDependencies": {
     "@types/node": "^17.0.17",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "denoify": "^0.11.0",
+    "rimraf": "^3.0.2"
   }
 }
